<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="nav.history.UpdateCashFlow"
    android:background="@color/CardsTheme"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ButtonTheme">

        <ImageView
            android:id="@+id/ivDialogUpdate"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_edit"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_edit"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_cash_flow"
                android:textSize="30sp"
                android:textColor="@color/TextTheme"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/TextAppearance.AppCompat.Title"/>
    </LinearLayout>

    <!-- D A T E -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/TextTheme"
            android:background="@color/InputsTheme"
            android:maxLines="1"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/date"
            tools:ignore="Deprecated">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- A M O U N T -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/TextTheme"
            android:background="@color/InputsTheme"
            android:maxLines="1"
            android:hint="@string/amount">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- C A T E G O R Y -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <AutoCompleteTextView
            android:id="@+id/updateDropdown_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/TextTheme"
            android:background="@color/InputsTheme"
            android:maxLines="1"
            android:hint="@string/category"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- D E S C R I P T I O N -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/TextTheme"
            android:background="@color/InputsTheme"
            android:maxLines="1"
            android:hint="@string/description">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteCashFlow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="0.3"
            android:backgroundTint="@color/Primary"
            android:text="@string/delete"
            android:textColor="@color/ButtonDelete"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateCashFlow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="0.3"
            android:backgroundTint="@color/Primary"
            android:text="@string/update"
            android:textColor="@color/ButtonUpdate"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelCashFlow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="0.3"
            android:backgroundTint="@color/Primary"
            android:text="@string/cancel"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</LinearLayout>