<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="nav.home.NewCashFlow"
    android:background="@color/CardsTheme"
    android:orientation="vertical">

    <!-- IMAGE + TITLE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ButtonTheme">

        <ImageView
            android:id="@+id/ivNewCashFlow"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_new_cashflow"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_new_cashflow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_cash_flow"
            android:textSize="30sp"
            android:textColor="@color/TextTheme"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/TextAppearance.AppCompat.Title"/>
    </LinearLayout>


    <!-- DATE -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/TextTheme"
            android:background="@color/InputsTheme"
            android:maxLines="1"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/date"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- AMOUNT -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/TextTheme"
            android:background="@color/InputsTheme"
            android:maxLines="1"
            android:hint="@string/amount" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- CATEGORY -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <AutoCompleteTextView
            android:id="@+id/actvDropdown_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/TextTheme"
            android:background="@color/InputsTheme"
            android:focusableInTouchMode="false"
            android:hint="@string/category"
            android:inputType="none"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- DESCRIPTION -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/TextTheme"
            android:background="@color/InputsTheme"
            android:maxLines="1"
            android:hint="@string/description" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- ADD -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addCashFlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="@color/Primary"
        android:text="@string/add"
        android:textColor="@android:color/black"/>
</LinearLayout>