<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="nav.settings.NewNotification"
    android:background="@color/CardsTheme"
    android:orientation="vertical">

    <!-- IMAGE + TITLE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ButtonTheme">

        <ImageView
            android:id="@+id/ivNewNotification"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_notification"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_notification"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_notification"
            android:textSize="30sp"
            android:textColor="@color/TextTheme"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/TextAppearance.AppCompat.Title"/>
    </LinearLayout>

    <!-- TITLE -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/TextTheme"
            android:background="@color/InputsTheme"
            android:hint="@string/title"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- MESSAGE -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/TextTheme"
            android:background="@color/InputsTheme"
            android:hint="@string/message" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- DATE & TIME -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@color/ButtonTheme">

        <DatePicker
            android:id="@+id/dpDatePicker"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center"
            android:scaleY="0.7"
            android:scaleX="0.7"
            android:calendarTextColor="@color/TextTheme"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"/>

        <TimePicker
            android:id="@+id/tpTimePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"
            android:layout_weight="1"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:numbersTextColor="@color/TextTheme"
            android:timePickerMode="spinner" />
    </LinearLayout>

    <!-- CREATE -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="@color/Primary"
        android:text="@string/create"
        android:textColor="@android:color/black"/>


</LinearLayout>